--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=memoraize
+
+# ===============================
+# MySQL 데이터베이스 연결 설정
+# ===============================
+spring.datasource.url=jdbc:mysql://localhost:3307/memoraize?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=root       # DB 사용자명
+spring.datasource.password=66624602   # DB 비밀번호
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ===============================
+# JPA / Hibernate 설정
+# ===============================
+spring.jpa.hibernate.ddl-auto=update   # 개발 중엔 update, 운영에선 validate 권장
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false          # 서비스 계층에서만 영속성 컨텍스트 사용
+
+# ===============================
+# SQL 로그 출력 (개발용)
+# ===============================
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
